[gd_scene load_steps=7 format=2]

[ext_resource path="res://art/sprites/health/breath_0.png" type="Texture" id=1]
[ext_resource path="res://art/sprites/health/health_20.png" type="Texture" id=2]
[ext_resource path="res://code/HIUD.gd" type="Script" id=3]
[ext_resource path="res://art/fuentes/snubnose DEMO.otf" type="DynamicFontData" id=4]
[ext_resource path="res://art/sprites/health.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 4 )

[node name="HIUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="score_label" type="Label" parent="."]
margin_left = 27.1164
margin_top = 10.9494
margin_right = 73.1164
margin_bottom = 46.9494
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -168.499
margin_top = 16.7151
margin_right = -8.49902
margin_bottom = 24.7151
grow_vertical = 2
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_under = Color( 1, 0.952941, 0.552941, 1 )
tint_progress = Color( 0.996078, 0.996078, 0.996078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="life1" type="Sprite" parent="."]
position = Vector2( 775.174, 21.6328 )
scale = Vector2( 0.103164, 0.103875 )
texture = ExtResource( 5 )

[node name="life2" type="Sprite" parent="."]
position = Vector2( 808.038, 21.3495 )
scale = Vector2( 0.103164, 0.103875 )
texture = ExtResource( 5 )

[node name="life3" type="Sprite" parent="."]
position = Vector2( 838.068, 21.3495 )
scale = Vector2( 0.103164, 0.103875 )
texture = ExtResource( 5 )
